# Serfor

./: .gitignore  README.md  Serfor.Rproj  condidatos_infractores.ipynb  main.py  pyproject.toml  ref.py
archive/: nasa.py  ref.py
archive/notebooks/: condidatos_infractores.ipynb
archive/trabajadores_scrapping/transparencia/: trabajadores_estado.py
code/r/: identificacion_empresas.R  summary_serfor_candidatos.Rmd
data/historial/: INFRACTORES_101.csv  INFRACTORES_109.csv  INFRACTORES_113.csv  INFRACTORES_115.csv  INFRACTORES_119.csv  INFRACTORES_120.csv  INFRACTORES_122.csv  INFRACTORES_123.csv  INFRACTORES_128.csv  INFRACTORES_134.csv  INFRACTORES_143.csv  INFRACTORES_144.csv  INFRACTORES_145.csv  INFRACTORES_146.csv  INFRACTORES_147.csv  INFRACTORES_150.csv  INFRACTORES_16.csv  INFRACTORES_17.csv  INFRACTORES_18.csv  INFRACTORES_2.csv  INFRACTORES_21.csv  INFRACTORES_27.csv  INFRACTORES_42.csv  INFRACTORES_43.csv  INFRACTORES_48.csv  INFRACTORES_57.csv  INFRACTORES_59.csv  INFRACTORES_63.csv  INFRACTORES_79.csv  INFRACTORES_81.csv  INFRACTORES_84.csv  INFRACTORES_85.csv  INFRACTORES_88.csv  INFRACTORES_93.csv  Registro%20Nacional%20de%20Infractores_0.csv
data/in/: infractores_representantes.db
data/raw/: infractores_unicos_identificados.csv
data/raw/historial_infractores/: INFRACTORES_103.csv  INFRACTORES_106.csv  INFRACTORES_107.csv  INFRACTORES_111.csv  INFRACTORES_112.csv  INFRACTORES_114.csv  (+37 more)
infractores/: main.py
sunat/: consultar_representantes.py  representantes_sunat.py
testing/: pasos municipalidades.md  proveedores_municipales.ipynb
(+4 files in other folders)
