[project]
name = "serfor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
